--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -10,7 +10,7 @@
 
 <ion-content padding>
   <ion-item>
-    <ion-label floating>Email</ion-label>
+    <ion-label floating>Email Adress</ion-label>
     <ion-input type="text" [(ngModel)]="user.email"></ion-input>
   </ion-item>
 
